--- a/src/components/activities/index.css
+++ b/src/components/activities/index.css
@@ -11,11 +11,21 @@
   background-color: var(--color-bg-default);
 
   &__Title {
-    margin: 0;
+    margin: 0 0 8px;
 
     font-size: 16px;
     font-style: normal;
     line-height: 150%;
+  }
+
+  &__Search {
+    z-index: 99;
+
+    width: 100%;
+
+    & > div {
+      padding-right: 0;
+    }
   }
 
   & .VegaTree {
