--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --tooltip-z-index: 99;
+}
+
 html,
 body,
 #root {
@@ -20,5 +24,5 @@ body,
 }
 
 .Tooltip {
-  z-index: 99;
+  z-index: var(--tooltip-z-index);
 }
