--- a/src/components/activities/index.css
+++ b/src/components/activities/index.css
@@ -6,7 +6,7 @@
 
   width: 20%;
   min-width: 316px;
-  height: 840px;
+  height: calc(100vh - 35px);
 
   background-color: var(--color-bg-default);
   border-radius: 4px;
