feat(components): реализация редакс хранилища для данных по канвасу, частичная синхронизация с BE, с
Jira issue: VEGA-871

--- a/src/components/objects-group/index.css
+++ b/src/components/objects-group/index.css
@@ -3,8 +3,15 @@
 
   height: 100%;
 
+  & > .VegaTree {
+    overflow-y: scroll;
+
+    height: 75%;
+  }
+
   &__GroupCreator {
     position: absolute;
+    z-index: 1;
     left: 0;
     bottom: 16px;
 
