--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   --tooltip-z-index: 99;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html,
 body,
 #root {
@@ -13,10 +17,6 @@ body,
 }
 
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
   width: 100%;
   height: 100%;
 
