--- a/src/components/step-editor/index.css
+++ b/src/components/step-editor/index.css
@@ -1,5 +1,6 @@
 :root {
   --step-editor-content-height: calc(100% - 50px);
+  --step-editor-select-top-indent: 12px;
 }
 
 .StepEditor {
@@ -23,12 +24,12 @@
     & > .Tabs {
       position: absolute;
 
-      top: 1px;
+      top: 2px;
     }
   }
 
   &__Content {
-    padding: 24px 12px;
+    padding: 24px var(--step-editor-select-top-indent);
 
     width: 100%;
     height: var(--step-editor-content-height);
@@ -40,8 +41,8 @@
     width: 100%;
   }
 
-  &__DialogInputLabel {
-    margin: 20px 0 4px;
+  &__SelectLabel {
+    margin: 0 0 8px;
 
     display: flex;
     align-items: center;
@@ -49,6 +50,50 @@
     font-size: 14px;
     line-height: 120%;
 
-    color: var(--color-control-typo-placeholder);
+    color: var(--color-typo-secondary);
+  }
+
+  &__TimeFrames {
+    margin-top: var(--step-editor-select-top-indent);
+
+    width: 100%;
+  }
+
+  &__ExtremePoints {
+    display: flex;
+
+    width: 100%;
+
+    & > div {
+      width: 50%;
+    }
+
+    & > div:first-of-type {
+      margin-right: 12px;
+    }
+  }
+
+  &__DatePointSelect {
+    width: 100%;
+  }
+
+  &__Continuous {
+    margin-top: var(--step-editor-select-top-indent);
+  }
+
+  &__ContinuousSelect {
+    width: calc(50% - 6px);
+  }
+
+  &__Cost {
+    margin-top: var(--step-editor-select-top-indent);
+  }
+
+  &__CostSelect {
+    width: calc(50% - 6px);
+  }
+
+  &__ParameterAppender {
+    margin-top: calc(var(--step-editor-select-top-indent) * 2);
   }
 }
