--- a/src/components/step-editor/index.css
+++ b/src/components/step-editor/index.css
@@ -1,15 +1,19 @@
 :root {
   --step-editor-content-height: calc(100% - 50px);
+  --step-editor-height: calc(100vh - 170px);
   --step-editor-select-top-indent: 12px;
+  --step-editor-min-width: 528px;
 }
 
 .StepEditor {
-  position: fixed;
-  top: 70px;
-  right: 30px;
+  position: absolute;
 
-  width: 528px;
-  height: calc(100vh - 100px);
+  z-index: 1;
+  top: 16px;
+  right: 16px;
+
+  min-width: var(--step-editor-min-width);
+  height: var(--step-editor-height);
 
   &__Tabs {
     position: relative;
