--- a/src/App/App.css
+++ b/src/App/App.css
@@ -16,11 +16,27 @@ body,
   height: 100%;
 }
 
-.App {
-  width: 100%;
-  height: 100%;
+.LC {
+  &__App-Wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 
-  background: var(--color-bg-default);
+    width: 100%;
+  }
+
+  &__App {
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    flex-grow: 1;
+
+    width: 100vw;
+    min-height: 100%;
+
+    color: var(--color-typo-primary);
+    background-color: var(--color-bg-default);
+  }
 }
 
 .Tooltip {
