--- a/src/components/in-progress/index.css
+++ b/src/components/in-progress/index.css
@@ -2,7 +2,7 @@
   position: absolute;
   z-index: 2;
   right: var(--space-xs);
-  bottom: var(--space-xs);
+  bottom: var(--space-s);
 
   width: 400px;
 
