--- a/src/components/activities/index.css
+++ b/src/components/activities/index.css
@@ -45,4 +45,10 @@
       padding-right: 0;
     }
   }
+
+  &__Switch {
+    position: absolute;
+    z-index: 1;
+    bottom: var(--space-xl);
+  }
 }
