--- a/src/App/App.css
+++ b/src/App/App.css
@@ -17,23 +17,23 @@ body,
 }
 
 .LC__App-Wrapper {
+  position: relative;
   z-index: 0;
 
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
 
   width: 100%;
-  height: 100%;
+  flex-grow: 1;
 }
 
 .LC__App {
-  display: flex;
-  overflow: hidden;
-  flex-direction: column;
-  flex-grow: 1;
+  position: absolute;
 
-  min-height: 100%;
+  overflow: hidden;
+
+  width: 100%;
+  height: 100%;
 
   color: var(--color-typo-primary);
   background-color: var(--color-bg-default);
