feat(components): изменение позиции лейбла "В разработке"
Jira issue: VEGA-2832

--- a/src/components/in-progress/index.css
+++ b/src/components/in-progress/index.css
@@ -1,8 +1,8 @@
 .LC_InProgress {
   position: absolute;
   z-index: 2;
-  right: var(--space-xs);
-  bottom: var(--space-s);
+  left: var(--space-s);
+  bottom: var(--space-xs);
 
   width: 400px;
 
