[VEGA-2714][Alpha] feat(notifications): Обобщенный вывод ошибок и уведомлений (#41)
* feat(global): added snackbar for showing an errors

Jira issue: VEGA-2714

* fix(global): fixes after review

Jira issue: VEGA-2714

* feat(global): project errors replaced by notifications

Jira issue: VEGA-2714

* fix(global): fixed showing server error in fetchVersion

Jira issue: VEGA-2714

* feat(global): added flushing notifications after projectId reset

Jira issue: VEGA-2714

* fix(components): minor fix

Jira issue: VEGA-2714

* refactor: remove sending notification on error

Jira issue: VEGA-2714

--- a/src/components/notifications/index.css
+++ b/src/components/notifications/index.css
@@ -1,10 +1,12 @@
-.LC_InProgress {
+.LC_Notifications {
   position: absolute;
   z-index: 2;
-  left: var(--space-s);
-  bottom: var(--space-xs);
+  left: 50%;
+  bottom: 0;
 
   width: 400px;
+
+  transform: translate(-50%, 0);
 
   &__SnackBar {
     padding-right: var(--space-xs);
