--- a/src/components/objects-group/index.css
+++ b/src/components/objects-group/index.css
@@ -99,8 +99,12 @@
   }
 
   &__NoStructure {
+    padding: 0 10px;
+
     display: flex;
     justify-content: center;
+
+    min-width: 150px;
 
     & > p {
       margin: 0;
