--- a/src/components/objects-group/index.css
+++ b/src/components/objects-group/index.css
@@ -27,7 +27,7 @@
     padding: 0;
 
     width: 480px;
-    height: 173px;
+    height: 191px;
   }
 
   &__DialogTitle {
@@ -59,6 +59,10 @@
 
   &__DialogInput {
     height: 32px;
+  }
+
+  &__DialogError {
+    height: 18px;
   }
 
   &__DialogControllers {
